ISSUE-1: Style adjustments for ESIE (#8)
* Add style and modify template for multiple menus in Navbar

* Remove slashes before page titles (design element)

* Add favicon to base theme folder; Fixes issue with not showing to logged out users

* Make sure content is offset by the height of admin toolbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,12 +19,6 @@ h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a {
     font-family: 'Hind Siliguri', sans-serif;
 }
 
-/*Adds the slashes...*/
-h1.title::before {
-    content: "\005C\005C";
-    color:rgba(80,90,90,1);
-}
-
 pre code {
     display: block;
     padding: 10px;
